# gfx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  gfx.h  gfx_math.c  gfx_math.h
.github/instructions/: copilot.instructions.md
.github/workflows/: linux-ci.yml
cpu/: fb0_platform.c  framebuffer.c  rasterizer.c
examples/: main.c  tinyobj_demo.c  tinyobj_utils.h  window_demo.c
examples/models/: triangle.mtl
gpu/: gl_loader.c  linux_window.c  mesh.c  shader.c  x11_platform.c
include/: framebuffer.h  gfx.h  gfx_math.h  gl_loader.h  mesh.h  rasterizer.h  shader.h  tinyobj_loader.h  x11_platform.h
src/: gfx_math.c  stubs.c  tinyobj_loader.c  tinyobj_preview.c
src/internal/: framebuffer.h  gl_loader.h  mesh.h  platform_window.h  rasterizer.h  shader.h  x11_platform.h
tests/: gfx_tests.c
